Enable Java 8 build